--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
 
 
+#container{
+   text-align: center;
+   margin: 80px;
+   /*border: 2px solid re;*/
+   padding:20px;
+   background-color: grey;
+}
+
+ 
+ ul.nav li{   
+      margin: 30px;
+   	display: inline; 
+
    }
+
+.header{
+margin:20px;
+padding: 5px;
+width:300px;
+height:450px;
+float:left;
+
+}
+
+
+footer{
+
+
+
+   
+}
+
+ul.footer li{
+margin:30px;
+display: inline;
+
+}
