--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ padding: 20px;
 	width: 250px;
 	float: left;
 	padding-right: 10px;
+	padding-left: 10px;
 }
 
 
@@ -42,6 +43,7 @@ padding: 20px;
 	width: 250px;
 	float: right;
 	padding-left: 10px;
+	padding-left: 10px;
 }
 
 .cause3 img{
@@ -49,6 +51,7 @@ padding: 20px;
 	width: 250px;
 	float: left;
 	padding-right: 10px;
+	padding-left: 10px;
 }
 
 .donate{
@@ -60,6 +63,13 @@ color:#f3f3f3;
 font-size:20pt;
 }
 
+.donate-btn{
+	padding: 8px 12px;
+	font-size: 18px;
+	width: 200px;
+	text-align: center;
+	font-weight: 400
+}
 
 .footer {
 	width: 550px;
