updated background css

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
    margin: 80px;
    /*border: 2px solid re;*/
    padding:20px;
-   background-color: grey;
+   background-color: ghostwhite;
+
    width:1060px;
    margin:0 auto;
 }
