--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 body.noscroll{
     position:fixed;
     overflow:hidden;
+    width:100%;
 }
 
 
@@ -26,7 +27,6 @@ body.noscroll{
     width:1060px;
     margin:0 auto;
 }
-
  
 ul.nav li {   
     margin: 30px;
@@ -135,54 +135,6 @@ ul.nav li {
     color:#31b143;
 }
 
-/* DONATE PAGE */
-.now {
-    font-size: 25px;
-    width: 200px;
-    text-align: center;
-    font-weight: 40;
-    color:#31b143;
-    font-weight: bold;
-}
-
-#gallery {
-    height:100%;
-    width:100%;
-    margin-top:20px;
-}
-
-#gallery img {
-}
-
-.thumbnail {
-    width:169px;
-}
-
-.callout {
-    color:#31b143;
-    font-weight: bold;
-}
-
-.focused {
-    z-index: 2;
-    position: absolute;
-    top:160px;
-    left:350px;
-}
-
-#lightbox {
-    display:none;
-    z-index: 1;
-    background-color: black;
-    position: absolute;
-    top: 0;
-    height:100%;
-    width:100%;
-    opacity: 0.75;
-}
-
-/* END DONATE PAGE */
-
 form {
     float:left;
     margin-top:25px;
@@ -275,6 +227,83 @@ input.formButton {
 
 
 /* end contact section */
+
+/* DONATE PAGE */
+.now {
+    font-size: 25px;
+    width: 200px;
+    text-align: center;
+    font-weight: 40;
+    color:#31b143;
+    font-weight: bold;
+}
+
+#gallery {
+    /*height:100%;*/
+    width:100%;
+    margin-top:20px;
+    display:none;
+}
+
+#gallery img {
+}
+
+.thumbnail {
+    width:169px;
+    cursor: pointer;
+    cursor: hand;
+    opacity: 0.5;
+}
+
+.callout {
+    color:#31b143;
+    font-weight: bold;
+}
+
+.focused {
+    z-index: 10;
+    position: absolute;
+    top:20%;
+    left:25%;
+``/*top:160px;
+    left:350px;*/
+}
+
+#lightbox {
+    display:none;
+    z-index: 1;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    height:100%;
+    width:100%;
+    opacity: 0.75;
+}
+
+#showingGallery {
+    margin-top:20px;
+}
+
+#showingGallery p {
+    cursor: pointer;
+    cursor: hand;
+}
+
+#showingGallery .donate-btn {
+    cursor: pointer;
+    cursor: hand;
+    width:285px;
+    background-color: #31b143;
+    border:0;
+    color:#ffffff;
+    letter-spacing: 1px;
+}
+
+.beneathGallery {
+    padding-top:20px;
+}
+
+/* END DONATE PAGE */
 
 
 .donate{
