--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,39 @@ body {
     margin:0 auto;
 }
 
- 
+h2{
+    color: blue;
+    text-align: left;
+    padding-left: 75px;
+}
+
+
+li{
+    display: inline;
+    color: blue;
+}
+#currentWeather{
+    font-size: 26px;
+    float: left;
+    padding-left: 32px;
+}
+
+#pastWeather{
+    font-size: 26px;
+    float: right;
+    padding-right: 32px;
+
+}
+
+#allWeather{
+    display: block;
+    height: 181px;
+    width: 1080px;
+}
+
+ul{
+    text-align: left;   
+} 
 ul.nav li {   
     margin: 30px;
     display: inline; 
