--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ h1 {
 
 body {
     margin:0;
+    height: auto;
 }
 
 
@@ -26,20 +27,89 @@ body {
 ul.nav li {   
     margin: 30px;
     display: inline; 
+
+}
+.headers{
+    width: 30%;
+    height: auto;
+    float: left;
+    clear:none;
+
 }
 
-.header {
+
+#one{
+    padding-left: 50px;
+    float:left;
+
+}
+#two{
+    padding-left: 50px;
+    float:left;
+}
+#three{
+    padding-left: 70px;
+   float:left;
+}
+
+#four{
+    padding-left: 70px;
+   float:left;
+}
+
+#five{
+    padding-left: 75px;
+   float:left;
+}
+#six{
+    padding-left: 40px;
+   float:left;
+}
+
+.header1 {
     margin:20px;
-    padding: 5px;
+    padding: 20px;
     width:300px;
-    height:450px;
+    height:auto;
+    float:left;
+}
+
+.header2 {
+    margin:20px;
+    padding: 20px;
+    width:300px;
+    height:auto;
+    float:left;
+}
+
+.header3 {
+    margin:20px;
+    padding: 20px;
+    width:300px;
+    height:auto;
+    float:left;
+}
+
+.header4 { 
+    margin:20px;
+    padding: 20px;
+    width:300px;
+    height:auto;
+    float:left;
+}
+
+.header5 { 
+    margin:20px;
+    padding: 20px;
+    width:300px;
+    height:auto;
     float:left;
 }
 
 .nav {
     width: 550px;
     height: 35px;
-    font-size: 24px;
+    font-size: 20px;
     font-family: Tahoma, sans-serif;
     font-weight: bold;
     text-align: right;
@@ -248,7 +318,7 @@ input.formButton {
     clear:both;
 	width: 550px;
     height: 35px;
-    font-size: 24px;
+    font-size: 20px;
     font-family: Tahoma, sans-serif;
     font-weight: bold;
     text-align: right;
@@ -272,4 +342,14 @@ ul.footer li{
 .footer li { 
     display: inline; 
     padding: 20px; 
+}
+
+
+.item{
+    background: #333;    
+    text-align: center;
+    height: 400px !important;
+}
+.carousel{
+    margin-top: 20px;
 }
